--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,60 @@
-.form {
-  padding: 5% 7%;
-  background-color: #f3f3f3;
+@import "reset";
+
+body {
+  font-family: "Avenir Next", sans-serif;
 }
 
-.form-item {
+.form-section {
+  padding: 5% 7%;
+  background-color: #f3f3f3;
+  box-shadow: 0 0 20px 0 #dadada;
+}
+
+.form {
+  width: 50%;
+  min-width: 300px;
   margin: 0 auto;
+  font-size: 1.1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.form__item {
+  margin: 10px 0 20px;
+}
+
+.label-box {
+  margin-bottom: 10px;
+}
+
+.input {
+  outline: none;
+  width: 100%;
+  height: 2.4rem;
+  border: 1px solid #d4d4d4;
+  border-radius: 4px;
+  font-family: "Avenir Next", sans-serif;
+  font-size: 1.1rem;
+  color: #797979;
+  padding-left: 7px;
+  padding-right: 7px;
+
+  &::placeholder {
+    font-family: "Avenir Next", sans-serif;
+    font-size: 1.1rem;
+    color: #d4d4d4;
+  }
+}
+
+button.submit-btn {
+  width: 11rem;
+  height: 2.5rem;
+  background: #ace4ac;
+  border: none;
+  border-radius: 4px;
+  font-size: 1.1rem;
+  cursor: pointer;
+  color: #008000;
+  margin: 40px auto 0;
 }
