--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 
 body {
   font-family: "Avenir Next", sans-serif;
+  font-size: 1.1rem;
 }
 
 .form-section {
@@ -14,7 +15,6 @@ body {
   width: 50%;
   min-width: 300px;
   margin: 0 auto;
-  font-size: 1.1rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -57,4 +57,71 @@ button.submit-btn {
   cursor: pointer;
   color: #008000;
   margin: 40px auto 0;
+
+  &:disabled {
+    cursor: not-allowed;
+    background: #ace4ac36;
+    color: #0080003b;
+  }
 }
+
+
+//--------------------- List Section -----------------------
+
+.list-section {
+  padding: 5% 7%;
+}
+
+.list {
+  width: 70%;
+  min-width: 300px;
+  margin: 0 auto;
+}
+
+.list-title {
+  text-align: center;
+  font-size: 1.5rem;
+  margin-bottom: 50px;
+}
+
+.list-header {
+  height: 50px;
+  color: #f3f3f3;
+  background-color: #797979;
+  display: flex;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+}
+
+.list-header__item {
+  text-align: center;
+  line-height: 50px;
+  width: 35%;
+
+  &:first-child {
+    width: 30%;
+  }
+}
+
+.list-item__inner {
+  height: 50px;
+  display: flex;
+  border: 1px solid #d6d6d6;
+  border-top: none;
+}
+
+.item {
+  line-height: 50px;
+  width: 35%;
+  padding: 0 15px;
+
+  &:first-child {
+    width: 30%;
+  }
+
+  &:nth-child(2) {
+    border-right: 1px solid #d6d6d6;
+    border-left: 1px solid #d6d6d6;
+  }
+}
+
