--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,20 @@ body {
   font-size: 1.1rem;
 }
 
+* {
+  box-sizing: border-box;
+}
+
+.btn {
+  width: 11rem;
+  height: 2.5rem;
+  border: none;
+  border-radius: 4px;
+  font-size: 1.1rem;
+  cursor: pointer;
+  margin: 40px auto 0;
+}
+
 .form-section {
   padding: 5% 7%;
   background-color: #f3f3f3;
@@ -31,7 +45,7 @@ body {
 .input {
   outline: none;
   width: 100%;
-  height: 2.4rem;
+  height: 2.7rem;
   border: 1px solid #d4d4d4;
   border-radius: 4px;
   font-family: "Avenir Next", sans-serif;
@@ -47,16 +61,9 @@ body {
   }
 }
 
-button.submit-btn {
-  width: 11rem;
-  height: 2.5rem;
+.submit-btn {
   background: #ace4ac;
-  border: none;
-  border-radius: 4px;
-  font-size: 1.1rem;
-  cursor: pointer;
   color: #008000;
-  margin: 40px auto 0;
 
   &:disabled {
     cursor: not-allowed;
@@ -76,6 +83,8 @@ button.submit-btn {
   width: 70%;
   min-width: 300px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .list-title {
@@ -125,3 +134,8 @@ button.submit-btn {
   }
 }
 
+.remove-all-btn {
+  background: #ffd1d7;
+  color: #fd5353;
+  margin-top: 60px;
+}
