--- a/scss/main.scss
+++ b/scss/main.scss
@@ -106,14 +106,14 @@ body {
   text-align: center;
   line-height: 50px;
   width: 35%;
-  border: 1px solid red;
+  //border: 1px solid red;
 
   &:first-child {
-    width: 30%;
+    width: 20%;
   }
 
   &:last-child {
-    flex-basis: 90px;
+    width: 10%;
   }
 }
 
@@ -130,12 +130,20 @@ body {
   padding: 0 15px;
 
   &:first-child {
-    width: 30%;
+    width: 20%;
+    border-right: 1px solid #d6d6d6;
   }
 
-  &:nth-child(2) {
+  &:nth-child(2), &:nth-child(3) {
     border-right: 1px solid #d6d6d6;
-    border-left: 1px solid #d6d6d6;
+  }
+
+  &:last-child {
+    width: 10%;
+    line-height: 1;
+    text-align: center;
+    color: #FF0000;
+    padding: 8px 6px;
   }
 }
 
