--- a/scss/main.scss
+++ b/scss/main.scss
@@ -76,12 +76,12 @@ body {
 //--------------------- List Section -----------------------
 
 .list-section {
-  padding: 5% 7%;
+  padding: 5% 3%;
 }
 
 .list {
-  width: 70%;
-  min-width: 300px;
+  width: 100%;
+  max-width: 800px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -103,10 +103,11 @@ body {
 }
 
 .list-header__item {
-  text-align: center;
-  line-height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 35%;
-  //border: 1px solid red;
+  text-align: center;
 
   &:first-child {
     width: 20%;
@@ -118,16 +119,16 @@ body {
 }
 
 .list-item__inner {
-  height: 50px;
+  //height: 50px;
   display: flex;
   border: 1px solid #d6d6d6;
   border-top: none;
 }
 
 .item {
-  line-height: 50px;
+  //line-height: 50px;
   width: 35%;
-  padding: 0 15px;
+  padding: 15px 15px;
 
   &:first-child {
     width: 20%;
